# AIF-Gen

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  experiments.ipynb  mkdocs.yml  pyproject.toml  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: docs.yml  ruff.yml  testing.yml
aif_gen/: __init__.py  main.py  typing.py
aif_gen/_cli/: main.py
aif_gen/api/: .prompt_mapper.py.swp  __init__.py  prompt_mapper.py
aif_gen/cli/: main.py
aif_gen/dataset/: __init__.py  alignment_dataset.py  alignment_sample.py  continual_alignment_dataset.py
aif_gen/generate/: README.md  __init__.py  caching.py  engine.py  entrypoint.py  service.py
aif_gen/task/: __init__.py  alignment_task.py  domain.py  domain_component.py  objective.py  preference.py
aif_gen/transforms/: __init__.py  base.py  functional.py  preference_swap_transform.py  split_transform.py
aif_gen/util/: find_irrelevant_files.py  hf.py  logging.py  path.py  seed.py  test.py
aif_gen/validation/: __init__.py  counts.py  embedding_diversity.py  entropy.py  llm_judge.py
baselines/trl/: .gitignore  README.md  dpo_continual.py  pyproject.toml
benchmarks/: README.md  continual_data_debug.json  continual_eval_checkpoints.py  dataloading.py  hf_upload_models.py  parallel_eval_checkpoints.py  reward_modeling.py
benchmarks/COPR/: README.md  copr.py  copr_trainer.py  mock_preference.json  requirements.txt  train_COPR.py  train_DPO.py
benchmarks/adapt_copr/: README.md  copr.py  copr_trainer.py
benchmarks/copr/: README.md  copr.py
benchmarks/cppo/: README.md  cppo.py  cppo_trainer.py
benchmarks/dpo/: README.md  continual_data_debug.json  continual_dpo_trainer.py  continual_eval_checkpoints.py  dataloading.py  dpo_continual.py  mock_data.py  ppo_continual.py  reward_modeling.py
benchmarks/dpo_ewc/: README.md  continual_dpo_EWC_trainer.py  dpo_EWC_continual.py
benchmarks/grpo/: README.md  continual_grpo_trainer.py  grpo_continual.py
benchmarks/ppo/: README.md  continual_ppo_trainer.py  ppo_continual.py
benchmarks/ppo_ewc/: README.md  continual_ppo_EWC_trainer.py  ppo_EWC_continual.py
benchmarks/reward_mas/: README.md  reward_modeling_mas.py
chat_templates/: olmo-chat-template.jinja
config/: aif_config.yaml  education_qna_hinted_2_direct.yaml  mock_config.yaml
config/static/: education_qna_direct.yaml  education_qna_eli5.yaml  education_qna_expert.yaml  education_qna_hinted.yaml  education_summary_eli5.yaml  education_summary_expert.yaml  politics_generate_formal.yaml  politics_generate_harmful.yaml  politics_generate_long.yaml  politics_generate_polite.yaml  politics_generate_rapper.yaml  politics_generate_shakespeare.yaml  politics_generate_short.yaml  politics_qna_eli5.yaml  politics_qna_expert.yaml  politics_qna_harmful.yaml  politics_qna_polite.yaml  politics_summary_eli5.yaml  politics_summary_expert.yaml  tech_healthcare_qna_eli5.yaml  tech_healthcare_qna_expert.yaml  tech_healthcare_summary_eli5.yaml  tech_healthcare_summary_expert.yaml  tech_physics_summary_eli5.yaml  tech_physics_summary_expert.yaml  tech_physics_summary_highschool.yaml
data/1739402780.2567701/: data.json
docs/: architecture.md  benchmarks.md  cli.md  dataset.md  env_vars.md  generation.md  index.md  mappers.md  quickstart.md  task.md  transforms.md  util.md  validation.md
docs/source/: aif_gen.api.prompt_mapper.rst  aif_gen.api.response_mapper.rst  aif_gen.api.rst  aif_gen.dataset.rst  aif_gen.dataset.split.rst  aif_gen.dataset.transforms.rst  aif_gen.dataset.validation.rst  aif_gen.generate.rst  aif_gen.rst  aif_gen.task.rst  aif_gen.task.seed_words.rst  aif_gen.util.rst  conf.py  index.rst  modules.rst
jobs/: cppo_multi_gpu.sh  download_cppo_jobs.sh  download_jobs.sh  dpo_ewc_single_gpu_domain-preference-shift.sh  dpo_ewc_single_gpu_lipschitz.sh  dpo_ewc_single_gpu_long-piecewise.sh  dpo_ewc_single_gpu_piecewise-preference-shift.sh  dpo_ewc_single_gpu_short-piecewise.sh  generate_all_downsampled.sh  generate_all_static.sh  generate_static.sh  parallel_eval.sh  parallel_eval_cppo_dataset.sh  ppo_multi_gpu.sh  ppo_single_gpu.sh  schedule_eval.sh  schedule_eval_cppo_dataset.sh  unkillable_diversity.sh  validate_all_static.sh  validate_all_static_diversity.sh  vllm_validation_compare.sh  wandb_sync.sh
jobs/ccpo/: ccpo_ccpo_multi_gpu.sh  ccpo_domain_shift_multi_gpu.sh  ccpo_lipschitz_multi_gpu.sh  ccpo_long_piecewise_multi_gpu.sh  ccpo_piecewise_multi_gpu.sh  ccpo_short_piecewise_multi_gpu.sh
jobs/cppo/: cppo_cppo_multi_gpu.sh  cppo_domain_shift_multi_gpu.sh  cppo_lipschitz_multi_gpu.sh  cppo_long_piecewise_multi_gpu.sh  cppo_piecewise_multi_gpu.sh  cppo_short_piecewise_multi_gpu.sh
jobs/dpo/: dpo_cppo_multi_gpu.sh  dpo_domain_shift_multi_gpu.sh  dpo_lipschitz_multi_gpu.sh  dpo_long_piecewise_multi_gpu.sh  dpo_piecewise_multi_gpu.sh  dpo_short_piecewise_multi_gpu.sh
jobs/dpo_ewc/: dpo_ewc_cppo_multi_gpu.sh  dpo_ewc_domain_shift_multi_gpu.sh  dpo_ewc_lipschitz_multi_gpu.sh  dpo_ewc_long_piecewise_multi_gpu.sh  dpo_ewc_piecewise_multi_gpu.sh  dpo_ewc_short_piecewise_multi_gpu.sh
jobs/ppo/: ppo_cppo_multi_gpu.sh  ppo_domain_shift_multi_gpu.sh  ppo_lipschitz_multi_gpu.sh  ppo_long_piecewise_multi_gpu.sh  ppo_piecewise_multi_gpu.sh  ppo_short_piecewise_multi_gpu.sh
jobs/ppo_ewc/: ppo_ewc_cppo_multi_gpu.sh  ppo_ewc_domain_shift_multi_gpu.sh  ppo_ewc_lipschitz_multi_gpu.sh  ppo_ewc_long_piecewise_multi_gpu.sh  ppo_ewc_piecewise_multi_gpu.sh  ppo_ewc_short_piecewise_multi_gpu.sh
notebooks/: continuity.ipynb
test/: test_alignment_dataset.py  test_alignment_task.py  test_continual_alignment_dataset.py  test_domain.py  test_domain_component.py  test_find_irrelevant_files.py  test_mock.py  test_preference.py  test_preference_swap_transform.py  test_seed_words.py
(+151 files in other folders)
