[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project.scripts]
aif = "aif_gen._cli.main:cli"

[project]
name = "aif-gen"
version = "0.1.0"
description = "A tool for generating synthetic, continual RLHF preference datasets"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name="Jacob Chmura", email="jacobpaul.chmura@gmail.com"},
]
dependencies = [
    "backoff>=2.2.1",
    "click>=8.1.8",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "openai>=1.61.1",
    "pydantic>=2.10.4",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "sentence-transformers>=3.4.1",
    "torch==2.3.0",
    "transformers>=4.49.0",
    "types-pyyaml>=6.0.12.20241230",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
]
benchmarks = [
    "setuptools>=75.8.0",
]

[tool.mypy]
files = ["aif_gen"]
install_types = true
non_interactive = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
skip = [".gitignore", "__init__.py"]

[tool.ruff]
src = ["aif_gen"]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
]
ignore = [
    "D100",  # Ignore "Missing docstring in public module"
    "D101",  # Ignore "Missing docstring in public class"
    "D102",  # Ignore "Missing docstring in public method"
    "D103",  # Ignore "Missing docstring in public function"
    "D104",  # Ignore "Missing docstring in public package"
    "D105",  # Ignore "Missing docstring in magic method"
    "D107",  # Ignore "Missing docstring in __init__"
    "D205",  # Ignore "blank line required between summary line and description"
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = [
    "--capture=no",
    "--color=yes",
    "-vvv",
]

[tool.coverage.run]
source = ["aif_gen"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pass",
    "raise NotImplementedError",
    "register_parameter",
    "torch.cuda.is_available",
]
